compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__argument_shadowing.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1742
expression: "\npub fn main(x: Int) {\n  fn(x: Float) {\n\n  }\n}\n"
---
pub fn main(x: Int) {
  fn(x: Float) {
|
  }
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
main
  kind:   Function
  detail: fn(Int) -> fn(Float) -> a
  sort:   2_main
  desc:   app
  edits:
    [3:0-3:0]: "main"
x
  kind:   Variable
  detail: Float
  sort:   2_x
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "x"
