compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import dep\n\npub fn main() {\n  0\n}"
---
import dep

pub fn main() {
  0
}

----- Completion content -----
[
    CompletionItem {
        label: "gleam",
        label_details: None,
        kind: Some(
            Module,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 7,
                        },
                        end: Position {
                            line: 0,
                            character: 10,
                        },
                    },
                    new_text: "gleam",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
