compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import_from_dependency.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "completion(TestProject::for_source(code).add_hex_module(\"example_module\",\n        dep), Position::new(0, 10))"
---
[
    CompletionItem {
        label: "example_module",
        label_details: None,
        kind: Some(
            Module,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 7,
                        },
                        end: Position {
                            line: 0,
                            character: 12,
                        },
                    },
                    new_text: "example_module",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
