compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import_from_dependency_with_docs.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "//// Main package\n//// documentation!\n\nimport gleam\n\npub fn main() {\n  0\n}"
---
//// Main package
//// documentation!

import gleam

pub fn main() {
  0
}

----- Completion content -----
[
    CompletionItem {
        label: "example_module",
        label_details: None,
        kind: Some(
            Module,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 7,
                        },
                        end: Position {
                            line: 3,
                            character: 12,
                        },
                    },
                    new_text: "example_module",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
