compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_an_import_not_from_dev_dependency_in_dev.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import gleam\n\npub fn main() {\n  0\n}\n"
---
import gle|am

pub fn main() {
  0
}


----- Completion content -----
app
  kind:   Module
  edits:
    [0:7-0:7]: "app"
example_module
  kind:   Module
  edits:
    [0:7-0:7]: "example_module"
indirect_module
  kind:   Module
  edits:
    [0:7-0:7]: "indirect_module"
